--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@ai-sdk/openai": "^1.3.22",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.5",
-    "ai": "^4.3.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.21.0",
     "lucide-react": "^0.508.0",
-    "openai": "^4.97.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
